--- a/PDM/SendMessage/app/src/main/AndroidManifest.xml
+++ b/PDM/SendMessage/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.SendMessage"
         tools:targetApi="31">
         <activity
+            android:name=".ShowMessageActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
