--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 transfer_learning_resnet50_12epochs_dcsmall.keras
 /TETI/CapNow
 TETI/imagens/dc_small/transfer_learning_resnet50_12epochs_dcsmall.keras
+DRA/projects/simulado/src/main/resources/application.properties
