iniciada atividade assíncrona de DRA sobre Swagger

--- a/DRA/avaliacoes/avaliacao1/src/main/resources/application.properties
+++ b/DRA/avaliacoes/avaliacao1/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=avaliacao1
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost/dra_avaliacao1?createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Lilidi
 # jpa properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
