--- a/DRA/projects/simulado/src/main/resources/application.properties
+++ b/DRA/projects/simulado/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=simulado
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost/ifam_simulado?createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Lilidi
 # jpa properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
