--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ transfer_learning_resnet50_12epochs_dcsmall.keras
 /TETI/CapNow
 TETI/imagens/dc_small/transfer_learning_resnet50_12epochs_dcsmall.keras
 DRA/projects/simulado/src/main/resources/application.properties
+DRA/laboratorio/dra_axios/API/axios/src/main/resources/application.properties
